--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
 </style>
 </head>
 
+  <div id="header-sticky-wrapper" class="sticky-wrapper" style="height: 84px;">
+    <header id="header" style="width: 708px;">
+	    <div class="container">
+
+	      <div id="logo" class="pull-left">
+		<h1><a href="#body" class="scrollto">DTMDCS 2024</a></h1>
+		<!-- Uncomment below if you prefer to use an image logo -->
+		<!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
+	      </div>
+
+	      <nav id="nav-menu-container">
+		<ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
+		  <li class=""><a href="#body">Home</a></li>
+		  <li class=""><a href="#important-dates">Important Dates</a></li>
+		  <li class=""><a href="#committee">Committee</a></li>
+		  <li class=""><a href="#cfp">Call for Papers</a></li>
+		  <li class="menu-active"><a href="#submission">Submission</a></li>
+		  <li class=""><a href="#program">Program</a></li>
+		  <li><a href="#venue">Venue</a></li>
+		</ul>
+	      </nav><!-- #nav-menu-container -->
+	    </div>
+
+	  </header></div>
+
 
 <h1 style="font-size: 40px" align="center"> 
     Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems (DTMTDCS)
