--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Submitted papers must represent original material which is not currently under r
   <li>Camera ready:	May 10, 2024 </li>  
 </ul>
 
-<h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
+<h2 style="margin-left:50px; font-size: 28px"> 
   Steering Committee
   </h2>
     <ul style="margin-bottom:20px; font-size: 26px">
