--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Submitted papers must represent original material which is not currently under r
 <h2 style="margin-left:50px; font-size: 28px"> 
   Steering Committee
   </h2>
-    <ul style="margin-bottom:20px; font-size: 20px">
+    <ul style="margin-left:50px; font-size: 20px">
       <li> Xi Zhang, Texas A&M University, College Station, U.S.A. (Chair) </li>
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
