--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ July 16-19, 2024, Jersey City, New Jersey, USA
                 <ul class="item_content" style="margin-left:50px; font-size: 20px">
                     <li>
                         <font color="black"><span>[01/2024] Workshop proposal is accepted.</span></font>
+		<font color="black"><span>[02/2024] Workshop call for paper is posted.</span></font>
                       
                     </li>
 
@@ -130,7 +131,7 @@ Submitted papers must represent original material which is not currently under r
 </ul>
 
 <h2 style="margin-left:50px; font-size: 28px"> 
-  Steering Committee
+  Steering Committee Members
   </h2>
     <ul style="margin-left:50px; font-size: 20px">
       <li> Xi Zhang, Texas A&M University, College Station, U.S.A. (Chair) </li>
