--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 25px;
-  margin: 4px 9px;
+  font-size: 22px;
+  margin: 2px 5px;
   cursor: pointer;
 }
 
@@ -41,6 +41,10 @@ July 16-19, 2024, Jersey City, New Jersey, USA
   
   <a href="Keynote.html">
   <button class="button button2"> Keynote Speakers </button>
+  </a>
+
+   <a href="files/DTMTDCS2024.pdf">
+  <button class="button button2"> Download CFP </button>
   </a>
   
    <a href="Workshop_Program.html">
