--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ July 16-19, 2024, Jersey City, New Jersey, USA
   <button class="button button2"> Keynote Speakers </button>
   </a>
 
-   <a href="files/DTMTDCS2024.pdf">
+   <a href="files/DTMTDCS2024_cfp.pdf">
   <button class="button button2"> Download CFP </button>
   </a>
   
