--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <div id="menu">
                 <ul>
 <li class="active"><a href="#">Home</a></li>
-<li> <a href="#">Organizing Committee</a></li>
-<li><a href="#">Keynote Speakers</a></li>
-<li><a href="#">Download CFP</a></li>
-<li><a href="#">Workshop Program</a></li>
-<li><a href="#">Workshop Registration</a></li>
+<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
+<li><a href="Workshop_Program.html">Workshop Program</a></li>
+<li><a href="Workshop_Registration.html">Workshop Registration</a></li>
 
                 </ul>
             </div>
