--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 <li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
 <li><a href="Keynote.html">Keynote Speakers</a></li>
 <li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
-<li><a href="Workshop_Program.html">Workshop Program</a></li>
-<li><a href="Workshop_Registration.html">Workshop Registration</a></li>
-
+<li><a href="Workshop_Program.html">Program</a></li>
                 </ul>
             </div>
         </nav>
