--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div id="menu">
                 <ul>
-<li class="active"><a href="#">Home</a></li>
+<li class="active"><a href="index.html">Home</a></li>
 <li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
 <li><a href="Keynote.html">Keynote Speakers</a></li>
 <li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
