--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -3,19 +3,40 @@
 
 <head>
   <title>Organizing Committee for DTMTDCS 2024</title>
-  <style>
-table, th, td {
-  border:0px solid black;
-  text-align: center;
-}
-</style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<h1 style="font-size: 40px" align="center"> 
-   Organizing Committee for International Workshop on DTMDCS 2024
-</h1>
-  
-<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+<header>
+    <!-- Top header menu containing
+         logo and Navigation bar -->
+    <div id="top-header">
+        <!-- Logo -->
+        <div id="logo">
+            <img src="image/logo.jpg" />
+        </div>
+        <!-- Navigation Menu -->
+        <nav>
+            <div id="menu">
+                <ul>
+<li class="active"><a href="index.html">Home</a></li>
+<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
+<li><a href="Workshop_Program.html">Program</a></li>                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <!-- Image menu in Header to contain an Image and 
+         a sample text over that image -->
+
+    <div id="header-image-menu">
+      <img src="image/Jersey_City_Skyline_sunset5.jpg">
+         <h1 id="image-text2">
+         Organizing Committee for DTMTDCS 2024
+        </h1> 
+           </div>
+</header>
 
   <body>
    
@@ -40,7 +61,8 @@ table, th, td {
 </table>
 -->
 
-<table style="table-layout: fixed ; width: 100%;">
+<table style="table-layout: fixed ; width: 100%; text-align: center;
+">
   <tr>
     <th> <h2 style="font-size: 40px">  General Chair </h2> </th>
   </tr>
@@ -56,7 +78,8 @@ table, th, td {
   </tr>
   </table>  
 
-    <table style="table-layout: fixed ; width: 100%;">
+    <table style="table-layout: fixed ; width: 100%;text-align: center;
+">
   <tr>
     <th><h2 style="margin-top:80px; font-size: 40px"> TPC Chair</h2></th>
   </tr>
@@ -72,10 +95,10 @@ table, th, td {
   </tr>
 </table>
 
-    <h2 style="margin-top:80px; margin-bottom:20px; font-size: 40px"> 
+    <h2 style="margin-left:80px; margin-top:80px; margin-bottom:20px; font-size: 40px"> 
   Steering Committee
   </h2>
-    <ul style="margin-bottom:20px; font-size: 26px">
+    <ul style="margin-left:80px; margin-bottom:20px; font-size: 26px">
       <li> Xi Zhang, Texas A&M University, College Station, U.S.A. (Chair) </li>
       <li> Yuanyuan Yang, State University of New York at Stony Brook, U.S.A. </li>
       <li> Dusit Niyato, Nanyang Technological University, Singapore  </li>
