--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -33,7 +33,7 @@
     <div id="header-image-menu">
       <img src="image/Jersey_City_Skyline_sunset5.jpg">
          <h1 id="image-text2">
-         Organizing Committee for DTMTDCS 2024
+         Organizing Committee for International Workshop on DTMTDCS 2024
         </h1> 
            </div>
 </header>
