--- a/Keynote.html
+++ b/Keynote.html
@@ -3,15 +3,42 @@
 
 <head>
   <title>Keynotes for DTMTDCS 2024</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<h1 style="font-size: 40px" align="center"> 
-   Keynotes for International Workshop on DTMTDCS 2024
-</h1>
-  
-<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+<header>
+    <!-- Top header menu containing
+         logo and Navigation bar -->
+    <div id="top-header">
+        <!-- Logo -->
+        <div id="logo">
+            <img src="image/logo.jpg" />
+        </div>
+        <!-- Navigation Menu -->
+        <nav>
+            <div id="menu">
+                <ul>
+<li class="active"><a href="index.html">Home</a></li>
+<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
+<li><a href="Workshop_Program.html">Program</a></li>                </ul>
+            </div>
+        </nav>
+    </div>
 
-<body style="margin-left:50px; margin-right:50px">
+    <!-- Image menu in Header to contain an Image and 
+         a sample text over that image -->
+
+    <div id="header-image-menu">
+      <img src="image/Jersey_City_Skyline_sunset5.jpg">
+         <h1 id="image-text2">
+         Keynotes for International Workshop on DTMTDCS 2024
+        </h1> 
+           </div>
+</header>
+
+<body >
 
   <h1 class="page-header" align="center" style="font-size: 45px"> 
     Keynote Speakers 
@@ -22,25 +49,25 @@
   <img src="image/Xi_Zhang.jpg" style="margin-right:20px; margin-top:50px " class="center" width="15%" height="15%"> 
   </div>
   
-  <h3 style="font-size: 26px"> <strong> First Keynote Speaker: Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding Director, Texas A&M University, College Station, Texas, U.S.A. </strong></h3>
-  <h3 style="font-size: 26px"> <strong> Title: Statistical-QoS-Driven Digital Twins for mURLLC Over Distributed Computing Systems Based 6G Mobile Networks</strong></h3>
- <p align="justify" style="font-size: 20px">
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> First Keynote Speaker: Prof. Xi Zhang, IEEE Fellow, IEEE Distinguished Lecturer, Full Professor, Founding Director, Texas A&M University, College Station, Texas, U.S.A. </strong></h3>
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: Statistical-QoS-Driven Digital Twins for mURLLC Over Distributed Computing Systems Based 6G Mobile Networks</strong></h3>
+ <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
     <strong> Abstract: </strong>
-   Digital Twin (DT) has been widely envisioned as a major intelligent application of 6G wireless networks in creating highly real-time and reliable wireless-connected environments to support efficient interactions and interplays between physical and virtual objects. On the other hand, DT has been widely recognized as a promising 6G wireless technique to efficiently realize the practical implementation of metaverse featured by various powerful virtual realities. As a digital representation of an intended real-world physical object, a DT needs to be timely and reliably updated by and synchronized with the corresponding physical systems. As a result, the stringent quality-of-service (QoS) guaranteed mobile wireless networks play the crucial role in efficiently supporting DT’s systems  designing and performance modeling and analyses. Correspondingly, a large number of 6G wireless techniques have been identified and developed to enable the QoS-provisioning for implementing and supporting DT’s. However, how to efficiently integrate the various advanced 6G wireless techniques for supporting DT’s QoS guarantees over 6G mobile networks has imposed many new open-problems/issues not encountered before. To conquer these challenges, a great deal of efforts have been made in developing various 6G key promising-candidate techniques in terms of principle, theory, architecture, protocol, technologies, etc. Towards the above ends, in this tutorial I will address a number of QoS-Driven 6G Wireless Techniques for efficiently supporting DT mobile networks, which include: (1) Statistical-QoS theory; (2) massive Ulrta-Low Latency Communications (mURLLC); (3) Metaverse, VR, and XR; (4) Integrated Sensing, and Communications (ISAC); (5) Multi-Tier Computing; (6) Finite Blocklength Coding (FBC); (7) Wireless Caching; (8) massive-MIMO; (9) network functions virtualization (NFV); (10) information-centric network (ICN); (11) software defined networks (SDN); (12) Full Duplex (FD); (13) Device-to-Device (D2D), (14) mmWAVE; (15) THz + NANO Networks, (16) AI + ML, etc. and how these techniques can be integrated to efficiently support the statistical delay and error-rate bounded QoS provisioning for supporting/implementing DT over 6G mobile wireless networks. Furthermore, we will also discuss several future research directions, obstacles, and open problems in the general areas for 6G mobile wireless networks.
+   Digital Twin (DT) has been widely envisioned as a major intelligent application of 6G wireless networks in creating highly real-time and reliable wireless-connected environments to support efficient interactions and interplays between physical and virtual objects. On the other hand, DT has been widely recognized as a promising 6G wireless technique to efficiently realize the practical implementation of metaverse featured by various powerful virtual realities. As a digital representation of an intended real-world physical object, a DT needs to be timely and reliably updated by and synchronized with the corresponding physical systems. As a result, the stringent quality-of-service (QoS) guaranteed mobile wireless networks play the crucial role in efficiently supporting DTâ€™s systems  designing and performance modeling and analyses. Correspondingly, a large number of 6G wireless techniques have been identified and developed to enable the QoS-provisioning for implementing and supporting DTâ€™s. However, how to efficiently integrate the various advanced 6G wireless techniques for supporting DTâ€™s QoS guarantees over 6G mobile networks has imposed many new open-problems/issues not encountered before. To conquer these challenges, a great deal of efforts have been made in developing various 6G key promising-candidate techniques in terms of principle, theory, architecture, protocol, technologies, etc. Towards the above ends, in this tutorial I will address a number of QoS-Driven 6G Wireless Techniques for efficiently supporting DT mobile networks, which include: (1) Statistical-QoS theory; (2) massive Ulrta-Low Latency Communications (mURLLC); (3) Metaverse, VR, and XR; (4) Integrated Sensing, and Communications (ISAC); (5) Multi-Tier Computing; (6) Finite Blocklength Coding (FBC); (7) Wireless Caching; (8) massive-MIMO; (9) network functions virtualization (NFV); (10) information-centric network (ICN); (11) software defined networks (SDN); (12) Full Duplex (FD); (13) Device-to-Device (D2D), (14) mmWAVE; (15) THz + NANO Networks, (16) AI + ML, etc. and how these techniques can be integrated to efficiently support the statistical delay and error-rate bounded QoS provisioning for supporting/implementing DT over 6G mobile wireless networks. Furthermore, we will also discuss several future research directions, obstacles, and open problems in the general areas for 6G mobile wireless networks.
  </p>
   
 
   
- <p align="justify" style="font-size: 20px">
-   <strong> BIO: </strong> Xi Zhang (xizhang@ece.tamu.edu) received the B.S. and M.S. degrees from Xidian University, Xi’an, China, the M.S. degree from Lehigh University, Bethlehem, PA, USA, all in electrical engineering and computer science, and the Ph.D. degree in electrical engineering and computer science (Electrical Engineering-Systems) from The University of Michigan, Ann Arbor, MI, USA. 
+ <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
+   <strong> BIO: </strong> Xi Zhang (xizhang@ece.tamu.edu) received the B.S. and M.S. degrees from Xidian University, Xiâ€™an, China, the M.S. degree from Lehigh University, Bethlehem, PA, USA, all in electrical engineering and computer science, and the Ph.D. degree in electrical engineering and computer science (Electrical Engineering-Systems) from The University of Michigan, Ann Arbor, MI, USA. 
  </p>
 
-  <p style="font-size: 20px" align="justify">
+  <p style="margin-left:80px; margin-right:80px;  font-size: 20px" align="justify">
     He is currently a Full Professor and the Founding Director of the Networking and Information Systems Laboratory, Department of Electrical and Computer Engineering, Texas A&M University, College Station, TX, USA. He is a Fellow of the IEEE for contributions to quality of service (QoS) theory in mobile wireless networks. He was with the Networks and Distributed Systems Research Department, AT&T Bell Laboratories, Murray Hill, NJ, USA, and AT&T Laboratories Research, Florham Park, NJ, in 1997. He was a Research Fellow with the School of Electrical Engineering, University of Technology, Sydney, Australia, and the Department of Electrical and Computer Engineering, James Cook University, Australia. He has published more than 400 research articles on wireless networks and communications systems, network protocol design and modeling, statistical communications, random signal processing, information theory, and control theory and systems. He received the U.S. National Science Foundation CAREER Award in 2004 for his research in the areas of mobile wireless and multicast networking and systems. He received six Best Paper Awards at IEEE GLOBECOM 2020, IEEE ICC 2018, IEEE GLOBECOM 2014, IEEE GLOBECOM 2009, IEEE GLOBECOM 2007, and IEEE WCNC 2010, respectively. One of his IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS papers has been listed as the IEEE Best Readings Paper (receiving the highest citation rate among all IEEE TRANSACTIONS/Journal articles in the area) on wireless cognitive radio networks and statistical QoS provisioning over mobile wireless networking. He is an IEEE Distinguished Lecturer of the IEEE Communications Society and the IEEE Vehicular Technology Society. He received the TEES Select Young Faculty Award for Excellence in Research Performance from the Dwight Look College of Engineering at Texas A&M University, College Station, TX, in 2006, and the Outstanding Faculty Award from Texas A&M University, in 2020. 
   </p>
 
-  <p style="font-size: 20px" align="justify">
-    Professor Zhang is serving or has served as an Editor for IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE TRANSACTIONS ON GREEN COMMUNICATIONS AND NETWORKING, and IEEE TRANSACTIONS ON NETWORK SCIENCE AND ENGINEERING, twice as a Guest Editor for IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS for two special issues on “Broadband Wireless Communications for High Speed Vehicles” and “Wireless Video Transmissions,” an Associate Editor for IEEE COMMUNICATIONS LETTERS, twice as the Lead Guest Editor for IEEE Communications Magazine for two special issues on “Advances in Cooperative Wireless Networking” and “Underwater Wireless Communications and Networks: Theory and Applications,” a Guest Editor for IEEE Wireless Communications Magazine for special issue on “Next Generation CDMA vs. OFDMA for 4G Wireless Applications,” an Editor for Wiley’s JOURNAL ON WIRELESS COMMUNICATIONS AND MOBILE COMPUTING, JOURNAL OF COMPUTER SYSTEMS, NETWORKING, AND COMMUNICATIONS, and Wiley’s JOURNAL ON SECURITY AND COMMUNICATIONS NETWORKS, and an Area Editor for Elsevier’s JOURNAL ON COMPUTER COMMUNICATIONS, and among many others. He is serving or has served as the TPC Chair for IEEE GLOBECOM 2011, TPC Vice-Chair for IEEE INFOCOM 2010, TPC Area Chair for IEEE INFOCOM 2012, Panel/Demo/Poster Chair for ACM MobiCom 2011, General Chair for IEEE ICDCS 2024 Workshop on ``Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems," General Chair for IEEE WCNC 2013, and TPC Chair for IEEE INFOCOM 2017-2019 Workshops on “Integrating Edge Computing, Caching, and Offloading in Next Generation Networks,” etc.
+  <p style="margin-left:80px; margin-right:80px;  font-size: 20px" align="justify">
+    Professor Zhang is serving or has served as an Editor for IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE TRANSACTIONS ON GREEN COMMUNICATIONS AND NETWORKING, and IEEE TRANSACTIONS ON NETWORK SCIENCE AND ENGINEERING, twice as a Guest Editor for IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS for two special issues on â€œBroadband Wireless Communications for High Speed Vehiclesâ€ and â€œWireless Video Transmissions,â€ an Associate Editor for IEEE COMMUNICATIONS LETTERS, twice as the Lead Guest Editor for IEEE Communications Magazine for two special issues on â€œAdvances in Cooperative Wireless Networkingâ€ and â€œUnderwater Wireless Communications and Networks: Theory and Applications,â€ a Guest Editor for IEEE Wireless Communications Magazine for special issue on â€œNext Generation CDMA vs. OFDMA for 4G Wireless Applications,â€ an Editor for Wileyâ€™s JOURNAL ON WIRELESS COMMUNICATIONS AND MOBILE COMPUTING, JOURNAL OF COMPUTER SYSTEMS, NETWORKING, AND COMMUNICATIONS, and Wileyâ€™s JOURNAL ON SECURITY AND COMMUNICATIONS NETWORKS, and an Area Editor for Elsevierâ€™s JOURNAL ON COMPUTER COMMUNICATIONS, and among many others. He is serving or has served as the TPC Chair for IEEE GLOBECOM 2011, TPC Vice-Chair for IEEE INFOCOM 2010, TPC Area Chair for IEEE INFOCOM 2012, Panel/Demo/Poster Chair for ACM MobiCom 2011, General Chair for IEEE ICDCS 2024 Workshop on ``Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems," General Chair for IEEE WCNC 2013, and TPC Chair for IEEE INFOCOM 2017-2019 Workshops on â€œIntegrating Edge Computing, Caching, and Offloading in Next Generation Networks,â€ etc.
 </p>
     
   <hr class="line">
@@ -49,15 +76,15 @@
      <img src="image/Trung_Duong.jpg" style="margin-right:20px; margin-top:50px" width="25%" height="25%"> 
     </div>
   
-    <h3 style="font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
-  <h3 style="font-size: 26px"> <strong> Title: TBA </strong></h3>
+    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: TBA </strong></h3>
 
-  <p align="justify" style="font-size: 20px">
+  <p align="justify" style="margin-left:80px; margin-right:80px;  font-size: 20px">
     <strong> Abstract: </strong> TBA
     </p>
 
     
-       <p align="justify" style="font-size: 20px">
+       <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
         </p>
 
 </body>
