--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -2,18 +2,47 @@
 <html>
 
 <head>
-  <title>DTMTDCS 2024</title>
+  <title>Program for DTMTDCS 2024</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 
-<h1 style="font-size: 40px" align="center"> 
-   Workshop Programs for International Workshop on DTMDCS 2024
-</h1>
-  
-<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+<header>
+    <!-- Top header menu containing
+         logo and Navigation bar -->
+    <div id="top-header">
+        <!-- Logo -->
+        <div id="logo">
+            <img src="image/logo.jpg" />
+        </div>
+        <!-- Navigation Menu -->
+        <nav>
+            <div id="menu">
+                <ul>
+<li class="active"><a href="index.html">Home</a></li>
+<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
+<li><a href="Workshop_Program.html">Program</a></li>                </ul>
+            </div>
+        </nav>
+    </div>
 
+    <!-- Image menu in Header to contain an Image and 
+         a sample text over that image -->
+
+    <div id="header-image-menu">
+      <img src="image/Jersey_City_Skyline_sunset5.jpg">
+         <h1 id="image-text2">
+         Workshop Program for International Workshop on DTMTDCS 2024
+        </h1> 
+           </div>
+</header>
+
+<body>
   <p align="justify" style="font-size: 20px">
    COMING SOON! 
  </p>
+</body>
   
 </html>
 
