--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -33,7 +33,7 @@
     <div id="header-image-menu">
       <img src="image/Jersey_City_Skyline_sunset5.jpg">
          <h1 id="image-text2">
-         Workshop Program for International Workshop on DTMTDCS 2024
+         Programs for International Workshop on DTMTDCS 2024
         </h1> 
            </div>
 </header>
