--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -76,6 +76,10 @@
     <tr>
     <td style="font-size: 26px"> Texas A&M University, College Station, U.S.A.</td>
   </tr>
+    <tr>
+    <td style="font-size: 26px"> xizhang@ece.tamu.edu</td>
+  </tr>
+
   </table>  
 
     <table style="table-layout: fixed ; width: 100%;text-align: center;
@@ -93,6 +97,10 @@
     <tr>
     <td style="font-size: 26px"> East China Normal University, China</td>
   </tr>
+      <tr>
+    <td style="font-size: 26px"> klwang@cee.ecnu.edu.cn</td>
+  </tr>
+
 </table>
 
     <h2 style="margin-left:80px; margin-top:80px; margin-bottom:20px; font-size: 40px"> 
