--- a/Keynote.html
+++ b/Keynote.html
@@ -67,13 +67,13 @@
   </p>
 
   <p style="margin-left:80px; margin-right:80px;  font-size: 20px" align="justify">
-    Professor Zhang is serving or has served as an Editor for IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE TRANSACTIONS ON GREEN COMMUNICATIONS AND NETWORKING, and IEEE TRANSACTIONS ON NETWORK SCIENCE AND ENGINEERING, twice as a Guest Editor for IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS for two special issues on â€œBroadband Wireless Communications for High Speed Vehiclesâ€ and â€œWireless Video Transmissions,â€ an Associate Editor for IEEE COMMUNICATIONS LETTERS, twice as the Lead Guest Editor for IEEE Communications Magazine for two special issues on â€œAdvances in Cooperative Wireless Networkingâ€ and â€œUnderwater Wireless Communications and Networks: Theory and Applications,â€ a Guest Editor for IEEE Wireless Communications Magazine for special issue on â€œNext Generation CDMA vs. OFDMA for 4G Wireless Applications,â€ an Editor for Wileyâ€™s JOURNAL ON WIRELESS COMMUNICATIONS AND MOBILE COMPUTING, JOURNAL OF COMPUTER SYSTEMS, NETWORKING, AND COMMUNICATIONS, and Wileyâ€™s JOURNAL ON SECURITY AND COMMUNICATIONS NETWORKS, and an Area Editor for Elsevierâ€™s JOURNAL ON COMPUTER COMMUNICATIONS, and among many others. He is serving or has served as the TPC Chair for IEEE GLOBECOM 2011, TPC Vice-Chair for IEEE INFOCOM 2010, TPC Area Chair for IEEE INFOCOM 2012, Panel/Demo/Poster Chair for ACM MobiCom 2011, General Chair for IEEE ICDCS 2024 Workshop on ``Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems," General Chair for IEEE WCNC 2013, and TPC Chair for IEEE INFOCOM 2017-2019 Workshops on â€œIntegrating Edge Computing, Caching, and Offloading in Next Generation Networks,â€ etc.
+    Professor Zhang is serving or has served as an Editor for IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE TRANSACTIONS ON GREEN COMMUNICATIONS AND NETWORKING, and IEEE TRANSACTIONS ON NETWORK SCIENCE AND ENGINEERING, twice as a Guest Editor for IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS for two special issues on â€œBroadband Wireless Communications for High Speed Vehicles" and "Wireless Video Transmissions", an Associate Editor for IEEE COMMUNICATIONS LETTERS, twice as the Lead Guest Editor for IEEE Communications Magazine for two special issues on "Advances in Cooperative Wireless Networking" and "Underwater Wireless Communications and Networks: Theory and Applications",  a Guest Editor for IEEE Wireless Communications Magazine for special issue on "Next Generation CDMA vs. OFDMA for 4G Wireless Applications", an Editor for Wiley's JOURNAL ON WIRELESS COMMUNICATIONS AND MOBILE COMPUTING, JOURNAL OF COMPUTER SYSTEMS, NETWORKING, AND COMMUNICATIONS, and Wiley's JOURNAL ON SECURITY AND COMMUNICATIONS NETWORKS, and an Area Editor for Elsevier's JOURNAL ON COMPUTER COMMUNICATIONS, and among many others. He is serving or has served as the TPC Chair for IEEE GLOBECOM 2011, TPC Vice-Chair for IEEE INFOCOM 2010, TPC Area Chair for IEEE INFOCOM 2012, Panel/Demo/Poster Chair for ACM MobiCom 2011, General Chair for IEEE ICDCS 2024 Workshop on "Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems", General Chair for IEEE WCNC 2013, and TPC Chair for IEEE INFOCOM 2017-2019 Workshops on "Integrating Edge Computing, Caching, and Offloading in Next Generation Networks", etc.
 </p>
     
   <hr class="line">
 
   <div style="text-align: center;">
-     <img src="image/Trung_Duong.jpg" style="margin-right:20px; margin-top:50px" width="25%" height="25%"> 
+     <img src="image/Trung_Duong2.jpg" style="margin-right:20px; margin-top:50px" width="25%" height="25%"> 
     </div>
   
     <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
@@ -85,6 +85,11 @@
 
     
        <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
+
+<strong>BIO:</strong>Trung Q. Duong (Fellow, IEEE) is a Canada Excellence Research Chair (CERC) and a Full Professor at Memorial University of Newfoundland, Canada. He is also the adjunct Chair Professor in Telecommunications at Queen’s University Belfast, UK. His current research interests include quantum communications, wireless communications, signal processing, machine learning, and real time optimization. 
+
+Dr. Duong has served as an Editor/Guest Editor for the IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE COMMUNICATIONS LETTERS, IEEE WIRELESS COMMUNICATIONS LETTERS, IEEE WIRELESS COMMUNICATIONS, IEEE COMMUNICATIONS MAGAZINES, and IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS. He received the Best Paper Award at the IEEE VTC-Spring 2013, IEEE ICC 2014, IEEE GLOBECOM 2016, 2019, 2022, IEEE DSP 2017, IWCMC 2019, 2023, and IEEE CAMAD 2023. He has received the two prestigious awards from the Royal Academy of Engineering (RAEng): RAEng Research Chair (2021-2025) and the RAEng Research Fellow (2015-2020). He is the recipient of the prestigious Newton Prize 2017.
+
         </p>
 
 </body>
