--- a/Keynote.html
+++ b/Keynote.html
@@ -92,5 +92,19 @@ Dr. Duong has served as an Editor/Guest Editor for the IEEE TRANSACTIONS ON WIRE
 
         </p>
 
+
+  <hr class="line">
+
+  <div style="text-align: center;">
+     <img src="image/Yang_Yang.jpg" style="margin-right:20px; margin-top:50px" width="25%" height="25%"> 
+    </div>
+  
+    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Third Keynote Speaker: Prof. Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </strong></h3>
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: TBA </strong></h3>
+
+  <p align="justify" style="margin-left:80px; margin-right:80px;  font-size: 20px">
+    <strong> Abstract: </strong> TBA
+    </p>
+
 </body>
 </html>
