--- a/Keynote.html
+++ b/Keynote.html
@@ -96,15 +96,22 @@ Dr. Duong has served as an Editor/Guest Editor for the IEEE TRANSACTIONS ON WIRE
   <hr class="line">
 
   <div style="text-align: center;">
-     <img src="image/Yang_Yang.jpg" style="margin-right:20px; margin-top:50px" width="20%" height="20%"> 
+     <img src="image/Yang_Yang.jpg" style="margin-right:20px; margin-top:50px" width="13%" height="13%"> 
     </div>
   
-    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Third Keynote Speaker: Prof. Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </strong></h3>
+    <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> 
+      <strong> Third Keynote Speaker: Prof. Yang Yang, Hong Kong University of Science and Technology (Guangzhou), China  </strong></h3>
   <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: TBA </strong></h3>
 
   <p align="justify" style="margin-left:80px; margin-right:80px;  font-size: 20px">
     <strong> Abstract: </strong> TBA
     </p>
+
+   <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
+
+<strong>BIO:</strong> Yang Yang received the B.S. and M.S. degrees in radio engineering from Southeast University, Nan jing, China, in 1996 and 1999, respectively, and the Ph.D. degree in information engineering from the Chinese University of Hong Kong, Hong Kong, in 2002. He is currently the Associate Vice-President for Teaching and Learning, Acting Dean of College of Education Sciences, and a Professor with the IoT Thrust with the Hong Kong University of Science and Technology, Guangzhou, China. Before joining Hong Kong University of Science and Technology (Guangzhou), he has held Faculty positions with the Chinese University of Hong Kong, Brunel University, London, U.K., University College London, London, U.K., and Shanghai Institute of Microsystem and Information Technology, Chinese Academy of Sciences, Shanghai, China. He has authored coauthored more than 280 papers and filed more than 80 technical patents in his research interests which include fog computing networks, service-oriented collaborative intelligence, wireless sensor networks, IoT applications, and advanced testbeds and experiments. Since January 2019, he has been the Chair of the Steering Committee of Asia-Pacific Conference on Communications (APCC). He is also a General Co-Chair of IEEE DSP 2018 conference and TPC Vice-Chair of IEEE ICC 2019 conference.
+
+   </p>
 
 </body>
 </html>
