--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          a sample text over that image -->
 
     <div id="header-image-menu">
-      <img src="image/Jersey_City_Skyline_sunset5.jpg">
+      <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
         <h1 id="image-text">
             Welcome To ICDCS 2024 International Workshop on 
         </h1>
