--- a/Workshop_Program.html
+++ b/Workshop_Program.html
@@ -31,7 +31,7 @@
          a sample text over that image -->
 
     <div id="header-image-menu">
-      <img src="image/Jersey_City_Skyline_sunset5.jpg">
+      <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
          <h1 id="image-text2">
          Programs for International Workshop on DTMTDCS 2024
         </h1> 
