--- a/Keynote.html
+++ b/Keynote.html
@@ -77,10 +77,11 @@
     </div>
   
     <h3 style="margin-left:80px; margin-right:80px;  font-size: 26px"> <strong> Second Keynote Speaker: Prof. Trung Q. Duong, Memorial University, Canada </strong></h3>
-  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px"> <strong> Title: TBA </strong></h3>
+  <h3 style="margin-left:80px; margin-right:80px; font-size: 26px">
+    <strong> Title: 6G Digital Twin Networks </strong></h3>
 
   <p align="justify" style="margin-left:80px; margin-right:80px;  font-size: 20px">
-    <strong> Abstract: </strong> TBA
+    <strong> Abstract: </strong> The future generation of wireless communications requires the stringent quality-of-service (QoS) requirements in terms of very high data rate, ultra-high success reception rate, and minimal latency. Supported by high QoS wireless communications, digital twin has become a game-changing technology in many applications including smart city, manufacturing, automotive, gaming, entertaining, and climate resilience. Edge computing-based wireless ultra-reliable and low-latency communications (URLLC) in 6G has been considered as a key technique to realise the full potential of digital twin. This talk discusses a joint communications and computation design of URLLC multi-tier computing in 6G that supports digital twin networks, not only fundamental requirements, but also enabling technologies, visions, and future challenges
     </p>
 
     
