--- a/Keynote.html
+++ b/Keynote.html
@@ -33,7 +33,7 @@
     <div id="header-image-menu">
       <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
          <h1 id="image-text2">
-         Keynotes for International Workshop on DTMTDCS 2024
+         <strong>Keynotes for International Workshop on DTMTDCS 2024  </strong>
         </h1> 
            </div>
 </header>
