--- a/Keynote.html
+++ b/Keynote.html
@@ -87,13 +87,9 @@
     
        <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
 
-<strong>BIO:</strong>Trung Q. Duong (Fellow, IEEE) is a Canada Excellence Research Chair (CERC) and a Full Professor at Memorial University of Newfoundland, Canada. He is also the adjunct Chair Professor in Telecommunications at Queen’s University Belfast, UK. His current research interests include quantum communications, wireless communications, signal processing, machine learning, and real time optimization. 
+<strong>BIO:</strong>
+         Dr. Trung Q. Duong (IEEE Fellow) is a Canada Excellence Research Chair and Full Professor at Memorial University of Newfoundland, Canada. He is a Research Chair of the Royal Academy of Engineering and an adjunct Chair Professor in Telecommunications at Queen’s University Belfast, UK.  His current research interests include quantum optimisation and machine learning in wireless communications. He has published 500+ books/bookchapters/papers with 18,000+ citations and h-index 74. He has served as an Editor for many reputable IEEE journals (IEEE Trans on Wireless Communications, IEEE Trans on Communications, IEEE Trans on Vehicular Technology, EEE Communications Surveys & Tutorials, IEEE Communications Letters, and IEEE Wireless Communications Letters) and has been awarded best paper awards in many flagship conferences including IEEE ICC 2014, IEEE GLOBECOM 2016, 2019, and 2022. He is the recipient of the Research Fellowship (2015-2020) and Research Chair (2020-2025) of the Royal Academy of Engineering. In 2017, he was awarded the Newton Prize from the UK government. He is a Fellow of IEEE and a Fellow of Asia-Pacific Artificial Intelligence Association (AAIA).
 </p>
-<p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
-Dr. Duong has served as an Editor/Guest Editor for the IEEE TRANSACTIONS ON WIRELESS COMMUNICATIONS, IEEE TRANSACTIONS ON COMMUNICATIONS, IEEE TRANSACTIONS ON VEHICULAR TECHNOLOGY, IEEE COMMUNICATIONS LETTERS, IEEE WIRELESS COMMUNICATIONS LETTERS, IEEE WIRELESS COMMUNICATIONS, IEEE COMMUNICATIONS MAGAZINES, and IEEE JOURNAL ON SELECTED AREAS IN COMMUNICATIONS. He received the Best Paper Award at the IEEE VTC-Spring 2013, IEEE ICC 2014, IEEE GLOBECOM 2016, 2019, 2022, IEEE DSP 2017, IWCMC 2019, 2023, and IEEE CAMAD 2023. He has received the two prestigious awards from the Royal Academy of Engineering (RAEng): RAEng Research Chair (2021-2025) and the RAEng Research Fellow (2015-2020). He is the recipient of the prestigious Newton Prize 2017.
-
-        </p>
-
 
   <hr class="line">
 
