--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>DTMDCS 2024</title>
 </head>
 <header>
-    <!-- Top header menu containing
-         logo and Navigation bar -->
-    <div id="top-header">
-        <!-- Logo -->
-         <!-- 
-	    <div id="logo">
-            <img src="image/logo.jpg" />
-        </div>
-	    -->
-        <!-- Navigation Menu -->
+    <h1 style="font-size: 30px" align="left"> 
+    DTMTDCS 2024
+</h1>
+<h2 style="font-size: 20px" align="left"> 
+July 16-19, 2024 <br>
+ Jersey City, New Jersey, USA
+</h2>
+
+<img src="image/new_york2.jpg" width="100%" height="100%">
+
+<!-- Navigation Menu -->
         <nav>
             <div id="menu">
                 <ul>
@@ -22,30 +23,23 @@
 <li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
 <li><a href="Keynote.html">Keynote Speakers</a></li>
 <li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
-<li><a href="Workshop_Program.html">Program</a></li>
-                </ul>
+<li><a href="Workshop_Program.html">Program</a></li> 
+<li><a href="Workshop_Registration.html">Registration</a></li>               </ul>
             </div>
         </nav>
-    </div>
-
-    <!-- Image menu in Header to contain an Image and 
-         a sample text over that image -->
-
-    <div id="header-image-menu">
-      <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
-        <h1 id="image-text">
-            Welcome To ICDCS 2024 International Workshop on 
-        </h1>
-        <h1 id="image-text2">
-         Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems (DTMTDCS)
-        </h1> 
-        <h2 id="image-text3">
-         Organized in conjunction with IEEE International Conference on Distributed Computing Systems (ICDCS) 2024
+   
+    <h1 style="font-size: 40px" align="center"> 
+    Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems (DTMTDCS)
+</h1>
+  <h3 style= margin-left:70px; margin-right:70px; font-size: 33px" align="center">
+  Organized in conjunction with <br>
+IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
 July 16-19, 2024, Jersey City, New Jersey, USA
-	</h2>
-    </div>
-</header>
+  </h3>
+  
 
+
+</header>
 
 <body>
 <hr class="line">
@@ -144,3 +138,4 @@ Submitted papers must represent original material which is not currently under r
       </ul>
 
 </body>
+
