--- a/Keynote.html
+++ b/Keynote.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
-<html>
-
+<!-- Header Menu of the Page -->
 <head>
-  <title>Keynotes for DTMTDCS 2024</title>
   <link rel="stylesheet" href="css/style.css">
+  <title>DTMDCS 2024</title>
 </head>
-
 <header>
-    <!-- Top header menu containing
-         logo and Navigation bar -->
-    <div id="top-header">
-        <!-- Logo -->
-        <div id="logo">
-            <img src="image/logo.jpg" />
-        </div>
-        <!-- Navigation Menu -->
+    <h1 style="font-size: 30px" align="left"> 
+    DTMTDCS 2024
+</h1>
+<h2 style="font-size: 20px" align="left"> 
+July 16-19, 2024 <br>
+ Jersey City, New Jersey, USA
+</h2>
+
+<img src="image/new_york2.jpg" width="100%" height="100%">
+
+<!-- Navigation Menu -->
         <nav>
             <div id="menu">
                 <ul>
-<li class="active"><a href="index.html">Home</a></li>
+<li ><a href="index.html">Home</a></li>
 <li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
-<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li class="active"><a href="Keynote.html">Keynote Speakers</a></li>
 <li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
-<li><a href="Workshop_Program.html">Program</a></li>                </ul>
+<li><a href="Workshop_Program.html">Program</a></li> 
+<li><a href="Workshop_Registration.html">Registration</a></li>               </ul>
             </div>
         </nav>
-    </div>
 
-    <!-- Image menu in Header to contain an Image and 
-         a sample text over that image -->
-
-    <div id="header-image-menu">
-      <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
-         <h1 id="image-text2">
-         <strong>Keynotes for International Workshop on DTMTDCS 2024  </strong>
-        </h1> 
-           </div>
-</header>
+         </header>
 
 <body >
 
