--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -1,44 +1,40 @@
 <!DOCTYPE html>
-<html>
-
+<!-- Header Menu of the Page -->
 <head>
-  <title>Organizing Committee for DTMTDCS 2024</title>
   <link rel="stylesheet" href="css/style.css">
+  <title>DTMDCS 2024</title>
 </head>
-
 <header>
-    <!-- Top header menu containing
-         logo and Navigation bar -->
-    <div id="top-header">
-        <!-- Logo -->
-        <div id="logo">
-            <img src="image/logo.jpg" />
-        </div>
-        <!-- Navigation Menu -->
+    <h1 style="font-size: 30px" align="left"> 
+    DTMTDCS 2024
+</h1>
+<h2 style="font-size: 20px" align="left"> 
+July 16-19, 2024 <br>
+ Jersey City, New Jersey, USA
+</h2>
+
+<img src="image/new_york2.jpg" width="100%" height="100%">
+
+<!-- Navigation Menu -->
         <nav>
             <div id="menu">
                 <ul>
-<li class="active"><a href="index.html">Home</a></li>
-<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
-<li><a href="Keynote.html">Keynote Speakers</a></li>
+<li ><a href="index.html">Home</a></li>
+<li class="active"> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li ><a href="Keynote.html">Keynote Speakers</a></li>
 <li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
-<li><a href="Workshop_Program.html">Program</a></li>                </ul>
+<li><a href="Workshop_Program.html">Program</a></li> 
+<li><a href="Workshop_Registration.html">Registration</a></li>               </ul>
             </div>
         </nav>
-    </div>
 
-    <!-- Image menu in Header to contain an Image and 
-         a sample text over that image -->
-
-    <div id="header-image-menu">
-      <img src="image/Jersey_City_Skyline_sunset7.5.jpg">
-         <h1 id="image-text2">
-         Organizing Committee for International Workshop on DTMTDCS 2024
-        </h1> 
-           </div>
-</header>
+         </header>
 
   <body>
+
+<h1 class="page-header" align="center" style="font-size: 45px"> 
+    Organizing Committee for DTMTDCS 2024 
+  </h1>
    
 <!--
 <table style="table-layout: fixed ; width: 100%;">
@@ -76,10 +72,9 @@
     <tr>
     <td style="font-size: 26px"> Texas A&M University, College Station, U.S.A.</td>
   </tr>
-    <tr>
+   <tr>
     <td style="font-size: 26px"> xizhang@ece.tamu.edu</td>
   </tr>
-
   </table>  
 
     <table style="table-layout: fixed ; width: 100%;text-align: center;
@@ -97,10 +92,9 @@
     <tr>
     <td style="font-size: 26px"> East China Normal University, China</td>
   </tr>
-      <tr>
-    <td style="font-size: 26px"> klwang@cee.ecnu.edu.cn</td>
+<tr>
+ <td style="font-size: 26px"> klwang@cee.ecnu.edu.cn  </td>
   </tr>
-
 </table>
 
     <h2 style="margin-left:80px; margin-top:80px; margin-bottom:20px; font-size: 40px"> 
