--- a/Workshop_Registration.html
+++ b/Workshop_Registration.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html>
-
+<!-- Header Menu of the Page -->
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <title>DTMDCS 2024</title>
 </head>
-
-<h1 style="font-size: 40px" align="center"> 
-   Workshop Registration for International Workshop on DTMDCS 2024
+<header>
+    <h1 style="font-size: 30px" align="left"> 
+    DTMTDCS 2024
 </h1>
-  
-<img src="image/Jersey_City_Skyline_sunset.jpg" width="100%" height="100%">
+<h2 style="font-size: 20px" align="left"> 
+July 16-19, 2024 <br>
+ Jersey City, New Jersey, USA
+</h2>
+
+<img src="image/new_york2.jpg" width="100%" height="100%">
+
+<!-- Navigation Menu -->
+        <nav>
+            <div id="menu">
+                <ul>
+<li ><a href="index.html">Home</a></li>
+<li> <a href="Organizing_Committee.html">Organizing Committee</a></li>
+<li ><a href="Keynote.html">Keynote Speakers</a></li>
+<li><a href="files/DTMTDCS2024_cfp.pdf">Download CFP</a></li>
+<li ><a href="Workshop_Program.html">Program</a></li> 
+<li class="active"><a href="Workshop_Registration.html">Registration</a></li>               </ul>
+            </div>
+        </nav>
+
+         </header>
+
+<body>
+
+<h1 class="page-header" align="center" style="font-size: 45px"> 
+    Registration for International Workshop on DTMTDCS 2024
+  </h1>
 
  <p align="justify" style="font-size: 20px">
    COMING SOON! 
