--- a/Keynote.html
+++ b/Keynote.html
@@ -51,7 +51,7 @@ July 16-19, 2024 <br>
 
   
  <p align="justify" style="margin-left:80px; margin-right:80px; font-size: 20px">
-   <strong> BIO: </strong> Xi Zhang (xizhang@ece.tamu.edu) received the B.S. and M.S. degrees from Xidian University, Xi'an, China, the M.S. degree from Lehigh University, Bethlehem, PA, USA, all in electrical engineering and computer science, and the Ph.D. degree in electrical engineering and computer science (Electrical Engineering-Systems) from The University of Michigan, Ann Arbor, MI, USA. 
+   <strong> BIO: </strong> Xi Zhang (IEEE Fellow) received the B.S. and M.S. degrees from Xidian University, Xi'an, China, the M.S. degree from Lehigh University, Bethlehem, PA, USA, all in electrical engineering and computer science, and the Ph.D. degree in electrical engineering and computer science (Electrical Engineering-Systems) from The University of Michigan, Ann Arbor, MI, USA. 
  </p>
 
   <p style="margin-left:80px; margin-right:80px;  font-size: 20px" align="justify">
