--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <title>DTMDCS 2024</title>
 </head>
 <header>
-    <h1 style="font-size: 30px" align="left"> 
-    DTMTDCS 2024
+    <h1 style="font-size: 40px" align="center"> 
+    Welcome To ICDCS 2024 International Workshop on <br>
+Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems (DTMTDCS)
 </h1>
-<h2 style="font-size: 20px" align="left"> 
-July 16-19, 2024 <br>
- Jersey City, New Jersey, USA
-</h2>
+  <h3 style= margin-left:70px; margin-right:70px; font-size: 33px" align="center">
+  Organized in conjunction with <br>
+IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
+July 16-19, 2024, Jersey City, New Jersey, USA
+  </h3>
+
 
 <img src="image/new_york2.jpg" width="100%" height="100%">
 
@@ -27,18 +30,6 @@ July 16-19, 2024 <br>
 <li><a href="Workshop_Registration.html">Registration</a></li>               </ul>
             </div>
         </nav>
-   
-    <h1 style="font-size: 40px" align="center"> 
-    Welcome To ICDCS 2024 International Workshop on Digital Twin-Enabled 6G Multi-Tier Distributed Computing Systems (DTMTDCS)
-</h1>
-  <h3 style= margin-left:70px; margin-right:70px; font-size: 33px" align="center">
-  Organized in conjunction with <br>
-IEEE International Conference on Distributed Computing Systems (ICDCS) 2024<br>
-July 16-19, 2024, Jersey City, New Jersey, USA
-  </h3>
-  
-
-
 </header>
 
 <body>
